move reports to separate project