@@ -1,33 +1,37 @@
 package ir.baho.framework.repository.impl;
 
-import lombok.Getter;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
 import org.springframework.data.mapping.Parameter;
 import org.springframework.data.mapping.PreferredConstructor;
 import org.springframework.data.mapping.model.PreferredConstructorDiscoverer;
 import org.springframework.data.projection.ProjectionFactory;
 import org.springframework.data.projection.ProjectionInformation;
-import org.springframework.lang.Nullable;
+import org.springframework.data.util.Lazy;
+import org.springframework.lang.Contract;
 import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
+import org.springframework.util.CollectionUtils;
 import org.springframework.util.ConcurrentReferenceHashMap;
 import org.springframework.util.ObjectUtils;
 
 import java.beans.PropertyDescriptor;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 public abstract class ReturnedType {
 
+    private static final Log logger = LogFactory.getLog(ReturnedType.class);
+
     private static final Map<CacheKey, ReturnedType> cache = new ConcurrentReferenceHashMap<>(32);
 
     private final Class<?> domainType;
 
-    private ReturnedType(Class<?> domainType) {
+    protected ReturnedType(Class<?> domainType) {
         this.domainType = domainType;
     }
 
@@ -36,7 +40,7 @@ public abstract class ReturnedType {
         Assert.notNull(domainType, "Domain type must not be null");
         Assert.notNull(factory, "ProjectionFactory must not be null");
 
-        return cache.computeIfAbsent(CacheKey.of(returnedType, domainType, factory.hashCode()), key -> returnedType.isInterface()
+        return cache.computeIfAbsent(CacheKey.of(returnedType, domainType, factory.hashCode()), _ -> returnedType.isInterface()
                 ? new ReturnedInterface(factory.getProjectionInformation(returnedType), domainType)
                 : new ReturnedClass(returnedType, domainType));
     }
@@ -45,20 +49,31 @@ public abstract class ReturnedType {
         return domainType;
     }
 
+    @Contract("null -> false")
     public final boolean isInstance(@Nullable Object source) {
         return getReturnedType().isInstance(source);
     }
 
-    public abstract boolean isProjecting();
-
     public abstract Class<?> getReturnedType();
 
+    public abstract boolean isProjecting();
+
+    public boolean isDtoProjection() {
+        return isProjecting() && !getReturnedType().isInterface();
+    }
+
     public abstract List<String> getInputProperties();
+
+    public boolean hasInputProperties() {
+        return !CollectionUtils.isEmpty(getInputProperties());
+    }
+
+    public abstract boolean needsCustomConstruction();
 
     private static final class ReturnedInterface extends ReturnedType {
 
         private final ProjectionInformation information;
-        private final Class<?> domainType;
+        private final boolean isProjecting;
         private final List<String> inputProperties;
 
         public ReturnedInterface(ProjectionInformation information, Class<?> domainType) {
@@ -67,7 +82,7 @@ public abstract class ReturnedType {
             Assert.notNull(information, "Projection information must not be null");
 
             this.information = information;
-            this.domainType = domainType;
+            this.isProjecting = !information.getType().isAssignableFrom(domainType);
             this.inputProperties = detectInputProperties(information);
         }
 
@@ -90,7 +105,12 @@ public abstract class ReturnedType {
 
         @Override
         public boolean isProjecting() {
-            return !information.getType().isAssignableFrom(domainType);
+            return isProjecting;
+        }
+
+        @Override
+        public boolean isDtoProjection() {
+            return false;
         }
 
         @Override
@@ -98,18 +118,23 @@ public abstract class ReturnedType {
             return inputProperties;
         }
 
+        @Override
+        public boolean needsCustomConstruction() {
+            return isProjecting() && information.isClosed();
+        }
+
     }
 
     private static final class ReturnedClass extends ReturnedType {
 
-        private static final Set<Class<?>> VOID_TYPES = new HashSet<>(Arrays.asList(Void.class, void.class));
+        private static final Set<Class<?>> VOID_TYPES = Set.of(Void.class, void.class);
 
         private final Class<?> type;
         private final boolean isDto;
-        private final List<String> inputProperties;
+        private final @Nullable PreferredConstructor<?, ?> constructor;
+        private final Lazy<List<String>> inputProperties;
 
         public ReturnedClass(Class<?> returnedType, Class<?> domainType) {
-
             super(domainType);
 
             Assert.notNull(returnedType, "Returned type must not be null");
@@ -125,7 +150,13 @@ public abstract class ReturnedType {
                     !VOID_TYPES.contains(type) &&
                     !type.getPackage().getName().startsWith("java.");
 
-            this.inputProperties = detectConstructorParameterNames(returnedType);
+            this.constructor = detectConstructor(type);
+
+            if (this.constructor == null) {
+                this.inputProperties = Lazy.of(Collections.emptyList());
+            } else {
+                this.inputProperties = Lazy.of(this::detectConstructorParameterNames);
+            }
         }
 
         @Override
@@ -135,36 +166,27 @@ public abstract class ReturnedType {
 
         @Override
         public boolean isProjecting() {
-            return isDto();
+            return isDto;
+        }
+
+        @Override
+        public boolean isDtoProjection() {
+            return isProjecting();
         }
 
         @Override
         public List<String> getInputProperties() {
-            return inputProperties;
+            return inputProperties.get();
         }
 
-        private List<String> detectConstructorParameterNames(Class<?> type) {
-            if (!isDto()) {
-                return Collections.emptyList();
-            }
-
-            PreferredConstructor<?, ?> constructor = PreferredConstructorDiscoverer.discover(type);
-
-            if (constructor == null) {
-                return Collections.emptyList();
-            }
-
-            List<String> properties = new ArrayList<>(constructor.getConstructor().getParameterCount());
-
-            for (Parameter<Object, ?> parameter : constructor.getParameters()) {
-                properties.add(parameter.getName());
-            }
-
-            return Collections.unmodifiableList(properties);
+        @Override
+        public boolean hasInputProperties() {
+            return this.constructor != null && this.constructor.getParameterCount() > 0 && super.hasInputProperties();
         }
 
-        private boolean isDto() {
-            return isDto;
+        @Override
+        public boolean needsCustomConstruction() {
+            return isDtoProjection() && hasInputProperties();
         }
 
         private boolean isDomainSubtype() {
@@ -174,20 +196,39 @@ public abstract class ReturnedType {
         private boolean isPrimitiveOrWrapper() {
             return ClassUtils.isPrimitiveOrWrapper(type);
         }
+
+        private @Nullable PreferredConstructor<?, ?> detectConstructor(Class<?> type) {
+            return isDtoProjection() ? PreferredConstructorDiscoverer.discover(type) : null;
+        }
+
+        private List<String> detectConstructorParameterNames() {
+            if (constructor == null) {
+                return Collections.emptyList();
+            }
+
+            int parameterCount = constructor.getConstructor().getParameterCount();
+            List<String> properties = new ArrayList<>(parameterCount);
+
+            for (Parameter<Object, ?> parameter : constructor.getParameters()) {
+                if (parameter.hasName()) {
+                    properties.add(parameter.getRequiredName());
+                }
+            }
+
+            if (properties.isEmpty() && parameterCount > 0) {
+                if (logger.isWarnEnabled()) {
+                    logger.warn(("No constructor parameter names discovered. "
+                            + "Compile the affected code with '-parameters' instead or avoid its introspection: %s")
+                            .formatted(constructor.getConstructor().getDeclaringClass().getName()));
+                }
+            }
+
+            return Collections.unmodifiableList(properties);
+        }
+
     }
 
-    @Getter
-    private static final class CacheKey {
-
-        private final Class<?> returnedType;
-        private final Class<?> domainType;
-        private final int projectionFactoryHashCode;
-
-        private CacheKey(Class<?> returnedType, Class<?> domainType, int projectionFactoryHashCode) {
-            this.returnedType = returnedType;
-            this.domainType = domainType;
-            this.projectionFactoryHashCode = projectionFactoryHashCode;
-        }
+    private record CacheKey(Class<?> returnedType, Class<?> domainType, int projectionFactoryHashCode) {
 
         public static CacheKey of(Class<?> returnedType, Class<?> domainType, int projectionFactoryHashCode) {
             return new CacheKey(returnedType, domainType, projectionFactoryHashCode);
@@ -199,19 +240,19 @@ public abstract class ReturnedType {
                 return true;
             }
 
-            if (!(o instanceof CacheKey cacheKey)) {
+            if (!(o instanceof CacheKey(Class<?> type, Class<?> dType, int factoryHashCode))) {
                 return false;
             }
 
-            if (projectionFactoryHashCode != cacheKey.projectionFactoryHashCode) {
+            if (projectionFactoryHashCode != factoryHashCode) {
                 return false;
             }
 
-            if (!ObjectUtils.nullSafeEquals(returnedType, cacheKey.returnedType)) {
+            if (!ObjectUtils.nullSafeEquals(returnedType, type)) {
                 return false;
             }
 
-            return ObjectUtils.nullSafeEquals(domainType, cacheKey.domainType);
+            return ObjectUtils.nullSafeEquals(domainType, dType);
         }
 
         @Override
@@ -224,8 +265,8 @@ public abstract class ReturnedType {
 
         @Override
         public String toString() {
-            return "ReturnedType.CacheKey(returnedType=" + this.getReturnedType() + ", domainType=" + this.getDomainType()
-                    + ", projectionFactoryHashCode=" + this.getProjectionFactoryHashCode() + ")";
+            return "ReturnedType.CacheKey(returnedType=" + this.returnedType() + ", domainType=" + this.domainType()
+                    + ", projectionFactoryHashCode=" + this.projectionFactoryHashCode() + ")";
         }
 
     }
